# Mac-Model-Center

./: README.md  main.py  project.ini  pyproject.toml
modules/convert/: __init__.py  mlx.py
modules/inference/: __init__.py
modules/inference/text2image/: __init__.py  core.py
modules/inference/text2text/: __init__.py  mlx.py  mlx_memo.md
routers/: __init__.py
routers/convert/: mlx.py
routers/inference/: text2image.py  text2text.py
schemas/: __init__.py
schemas/convert/: __init__.py
schemas/inference/: __init__.py  text2image.py  text2text.py
utils/: config.py  dtype.py
