[project]
name = "modelplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Pytorch
    "torch==2.12.0",
    "torchvision==0.27.0",
    "torchaudio==2.11.0",
    
    # transformers
    "transformers==5.13.0",
    "accelerate==1.13.0",
    "diffusers==0.39.0",

    # tools
    "pydantic==2.13.4",
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "openai==2.45.0",

    #mlx
    "mlx-lm==0.31.3"

]
